mega uber changes

--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -1,13 +1,37 @@
 doctype html
+html(lang="en")
 html
   head
     title= 'Taru Laurean Herrasta'
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    meta(charset="utf-8")
+    meta(name="viewport", content="width=device-width, initial-scale=1, shrink-to-fit=no")
+    link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous")
+
+
   body
-    a(href='/') Koti - Taru Laurean Herrasta
-    br
-    a(href='/pelaajat') Parhaat Pelaajat
-    br
-    a(href='/stats') Statistiikkaa
+    nav.navbar.navbar-expand-sm.bg-light.navbar.dark
+        .container-fluid
+            ul.navbar-nav
+                li.nav-item
+                    a.nav-link(href='/')
+                        img(src="/images/wizard.png", alt="Logo")
+                li.nav-item
+                    a.nav-link(href='/', class="btn btn-info", role="button") Koti - Taru Laurean Herrasta
+                li.nav-item
+                    a.nav-link(href='/pelaajat', class="btn btn-info", role="button") Parhaat Pelaajat
+                li.nav-item
+                    a.nav-link(href='/stats', class="btn btn-info", role="button") Statistiikkaa
+
+
 
     block content
+
+
+            script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js", integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN", crossorigin="anonymous")
+            script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js", integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q", crossorigin="anonymous")
+            script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js", integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl", crossorigin="anonymous")
+
+    footer
+        .row
+            .col-12
+                small &copy; Juha Penttinen 2018
