--- a/app_server/views/pelaajat.pug
+++ b/app_server/views/pelaajat.pug
@@ -5,4 +5,4 @@ block content
   ul
     each winner in winners
       li= winner.score + ': ' + winner.player
-  a(href='/worldcup/add') Lisää uusi pelaaja
+  a(href='/pelaajat/add') Lisää uusi pelaaja
