--- a/app_server/views/pelaajat_add.pug
+++ b/app_server/views/pelaajat_add.pug
@@ -3,13 +3,13 @@ extends layout
 block content
     .row
         h4 Uusi paras pelaaja
-        form(action="", method="post")
-            .form-group.row
-                label Pelaaja
-                    input.form.control(name="pelaaja")
-            .form-group.row
-                label Pisteet
-                    input.form.control(name="pisteet")
-            .form-group.row
-                button.btn-primary Add
+    form(action="", method="post")
+      .form-group.row
+        label Pelaaja
+          input.form.control(name="player")
+      .form-group.row
+        label Pisteet
+          input.form.control(name="score")
+      .form-group.row
+        button.btn-primary Add
 
