--- a/app_server/views/pelaajat_add.pug
+++ b/app_server/views/pelaajat_add.pug
@@ -2,14 +2,14 @@ extends layout
 
 block content
    .row
-     h4 Uusi paras pelaaja
+     h4= 'Uusi paras pelaaja'
    form(action="", method="post")
       .form-group.row
         label Pelaaja
-          input.form.control(name="player")
+            input.form.control(name="player")
       .form-group.row
         label Pisteet
-          input.form.control(name="score")
+            input.form.control(name="score")
       .form-group.row
         button.btn-primary Add
 
