--- a/app_server/views/pelaajat_add.pug
+++ b/app_server/views/pelaajat_add.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
     .row
-        h4 New world cup winner
+        h4 Uusi voittaja
     form(action="", method="post")
         .form-group.row
             label Pelaaja
@@ -11,4 +11,4 @@ block content
             label Pisteet
                 input.form-control(name="score")
         .form-group.row
-button.btn-primary Add
+                button.btn-primary Add
